Fixed positional issue
Issue regarding mobile horizontal scrolling still outstanding

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -28,10 +28,6 @@ p {
 	font-weight: 500;
 }
 
-body {
-	position: fixed;
-}
-
 main {
 	background-color: var(--col-bg1);
 	overflow-y: auto;
